--- a/src/scss/components/grid.scss
+++ b/src/scss/components/grid.scss
@@ -42,8 +42,8 @@
 
 @for $i from 1 through $grid_size {
  	[#{$prefix}~="#{$i}"] {
-  		max-width: percentage($i / 12);
-  		flex: 0 0 percentage($i / 12);
+  		max-width: percentage($i / $grid_size);
+  		flex: 0 0 percentage($i / $grid_size);
   		padding: {
   			left: $indent-space;
   			right: $indent-space;
@@ -51,7 +51,7 @@
   	}
   	[#{$prefix}~="offset-#{$i}"] {
   		margin: {
-  			right: percentage($i / 12);
+  			right: percentage($i / $grid_size);
   		}
   	}
 }
@@ -62,8 +62,8 @@
 
 		@for $i from 1 through $grid_size {
 		 	[#{$prefix}~="#{$size}-#{$i}"] {
-		  		max-width: percentage($i / 12);
-		  		flex: 0 0 percentage($i / 12);
+		  		max-width: percentage($i / $grid_size);
+		  		flex: 0 0 percentage($i / $grid_size);
 		  		padding: {
 		  			left: $indent-space;
 		  			right: $indent-space;
@@ -71,7 +71,7 @@
 		  	}
 		  	[#{$prefix}~="#{$size}-offset-#{$i}"] {
 		  		margin: {
-		  			right: percentage($i / 12);
+		  			right: percentage($i / $grid_size);
 		  		}
 		  	}
 		}
